live/environments/lab/cluster/confluence/5-sts-confluence.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: RELEASE-NAME-confluence
  labels:
    app: confluence
spec:
  replicas: 1
  serviceName: RELEASE-NAME-confluence
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
    spec:
      serviceAccountName: RELEASE-NAME-confluence
      terminationGracePeriodSeconds: 25
      securityContext:
        fsGroup: 2002
      containers:
        - name: confluence
          image: "docker-local.artifactory.medimpact.com/itapps/confluence:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: hazelcast
              containerPort: 5701
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 8090
              path: /status
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: "2"
              memory: 2G
          volumeMounts:
            - name: local-home
              mountPath: "/var/atlassian/application-data/confluence"
            - name: local-home
              mountPath: "/opt/atlassian/confluence/logs"
              subPath: "logs"
            - name: shared-home
              mountPath: "/var/atlassian/application-data/shared-home"
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "/shutdown-wait.sh"]
      volumes:
        - name: local-home
          emptyDir: {}
        - name: shared-home
          persistentVolumeClaim:
            claimName: sharedvol
