live/environments/lab/cluster/confluence/2-svc-confluence-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: confluence-postgres
  name: confluence-postgres
  namespace: itapps-dev
spec:
  ports:
    - name: tcp-postgres
      port: 5432
      targetPort: 5432
  selector:
    app: confluence-postgres
