live/environments/lab/cluster/confluence/4-svc-confluence.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: confluence
  namespace: itapps-dev
spec:
  type: ClusterIP
  ports:
  - name: http-confluence
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: confluence
