live/environments/lab/cluster/confluence/confluence-helm.yaml
---
# Source: confluence/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence
  labels:
    helm.sh/chart: confluence-1.7.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: confluence
    app.kubernetes.io/version: "7.19.2"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 5701
      targetPort: hazelcast
      protocol: TCP
      name: hazelcast
  selector:
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: confluence
---
# Source: confluence/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: confluence
  labels:
    helm.sh/chart: confluence-1.7.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: confluence
    app.kubernetes.io/version: "7.19.2"
    app.kubernetes.io/managed-by: Helm
    
spec:
  replicas: 1
  serviceName: confluence
  selector:
    matchLabels:
      app.kubernetes.io/name: confluence
      app.kubernetes.io/instance: confluence
  template:
    metadata:
      annotations:
        checksum/config-jvm: 23d560e80e2e63f2c5c7b407ac06342026028984c7a337a20cc079f6b00ece02
        
      labels:
        app.kubernetes.io/name: confluence
        app.kubernetes.io/instance: confluence
        
    spec:
      serviceAccountName: confluence
      terminationGracePeriodSeconds: 25
      securityContext:
        
        
        fsGroup: 2002
        runAsUser: 2002
      hostAliases:
        
      containers:
        - name: confluence
          image: "docker-local.artifactory.medimpact.com/itapps/confluence:7.19.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: hazelcast
              containerPort: 5701
              protocol: TCP
            
          readinessProbe:
            httpGet:
              port: 8090
              path: /status
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          resources:
            limits:
              cpu: "2"
              memory: 2G
            requests:
              cpu: 100m
              memory: 1G
          volumeMounts:
            
            - name: local-home
              mountPath: "/var/atlassian/application-data/confluence"
            - name: local-home
              mountPath: "/opt/atlassian/confluence/logs"
              subPath: "logs"
            - name: shared-home
              mountPath: "/var/atlassian/application-data/shared-home"
            
            
            
            
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "/shutdown-wait.sh"]
        
        
        
      volumes:
        
        
        - name: shared-home
        
          persistentVolumeClaim:
            claimName: itapps-confluence-dev
        
        
        
        
        
  
  
  volumeClaimTemplates:
  - metadata:
      name: local-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "itapps-dev"
      resources:
        requests:
          storage: 1Gi
---
# Source: confluence/templates/ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence-setup
  labels:
    helm.sh/chart: confluence-1.7.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: confluence
    app.kubernetes.io/version: "7.19.2"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    
    "nginx.ingress.kubernetes.io/affinity": "cookie"
    "nginx.ingress.kubernetes.io/affinity-mode": "persistent"
    "nginx.ingress.kubernetes.io/proxy-body-size": 250m
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "300"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "300"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "300"
spec:

  ingressClassName: nginx
  rules:
    - host: confluence-dev.medimpact.com
      http:
        paths:
          - path: /setup
            pathType: Prefix
            backend:
              service:
                name: confluence
                port:
                  number: 80
          - path: /bootstrap
            pathType: Prefix
            backend:
              service:
                name: confluence
                port:
                  number: 80
---
# Source: confluence/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence
  labels:
    helm.sh/chart: confluence-1.7.1
    app.kubernetes.io/name: confluence
    app.kubernetes.io/instance: confluence
    app.kubernetes.io/version: "7.19.2"
    app.kubernetes.io/managed-by: Helm
    
  annotations:
    
    "nginx.ingress.kubernetes.io/affinity": "cookie"
    "nginx.ingress.kubernetes.io/affinity-mode": "persistent"
    "nginx.ingress.kubernetes.io/proxy-body-size": 250m
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "60"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "60"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "60"
spec:

  ingressClassName: nginx
  rules:
    - host: confluence-dev.medimpact.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: confluence
                port:
                  number: 80
# ---
# # Source: confluence/templates/tests/test-application-status.yaml
# apiVersion: v1
# kind: Pod
# metadata:
  # name: "confluence-application-status-test"
  # annotations:
    # "helm.sh/hook": test
    # "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded"
    
  # labels:
    # helm.sh/chart: confluence-1.7.1
    # app.kubernetes.io/name: confluence
    # app.kubernetes.io/instance: confluence
    # app.kubernetes.io/version: "7.19.2"
    # app.kubernetes.io/managed-by: Helm
    
# spec:
  # containers:
    # - name: test
      # image: alpine
      # env:
        # - name: STATUS_URL
          # value: "http://confluence:80/status"
      # command:
        # - /bin/sh
        # - -ec
        # - |
          # apk add -q jq curl
          # STATUS=$(curl -s "$STATUS_URL")
          # echo "Verifying application state is RUNNING or FIRST_RUN: $STATUS"
          # echo $STATUS | jq -e '.state|test("RUNNING|FIRST_RUN")'
  # restartPolicy: Never
# ---
# # Source: confluence/templates/tests/test-shared-home-permissions.yaml
# apiVersion: v1
# kind: Pod
# metadata:
  # name: "confluence-shared-home-permissions-test"
  # annotations:
    # "helm.sh/hook": test
    # "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded"
    
  # labels:
    # helm.sh/chart: confluence-1.7.1
    # app.kubernetes.io/name: confluence
    # app.kubernetes.io/instance: confluence
    # app.kubernetes.io/version: "7.19.2"
    # app.kubernetes.io/managed-by: Helm
    
# spec:
  # containers:
    # - name: test
      # image: debian:stable-slim
      # imagePullPolicy: IfNotPresent
      # securityContext:
        # # We assume that the UID and GID used by the product images are the same, which in practice they are
        # runAsUser: 2002
        # runAsGroup: 2002
      # volumeMounts:
        # - name: shared-home
          # mountPath: /shared-home
      # command:
        # - /bin/sh
        # - -ec
        # - |
          # ls -ld /shared-home
          # echo "Creating temporary file in shared home as user $(id -u):$(id -g)"
          # touch /shared-home/permissions-test
          # ls -l /shared-home/permissions-test
          # rm /shared-home/permissions-test
  # volumes:
    
    # - name: shared-home
    
      # persistentVolumeClaim:
        # claimName: itapps-confluence-dev
    
  # restartPolicy: Never
